add body part image download endpoint, change imageUrl in bodyPartView to id
